<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:focusable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_title_custom_dialog"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/please_input_pass"
            android:textColor="#0182af"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dip"
        android:gravity="center_vertical"
        android:background="@drawable/bg_middle_custom_dialog"
        android:paddingLeft="10dp" 
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_entry_password"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:editable="true"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/please_input_pass"
            android:password="true"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" 
        android:background="@drawable/bg_bottom_custom_dialog">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:gravity="center"
            android:background="@null"
            android:text="@string/submit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:gravity="center"
            android:background="@null"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>